<resources>

        <string name="app_name">HealthMate</string>
        <string name="tagline">Your Wellness Companion</string>
        <string name="email">Email</string>
        <string name="password">Password</string>
        <string name="login">Login</string>
        <string name="dont_have_account_sign_up">Don\'t have an account? Sign Up</string>
        <string name="welcome_back">Welcome back!</string>
        <string name="workouts">Workouts</string>
        <string name="meals">Meals</string>
        <string name="quick_actions">Quick Actions</string>
        <string name="log_workout">Log Workout</string>
        <string name="track_your_exercise">Track your exercise</string>
        <string name="log_meal">Log Meal</string>
        <string name="track_your_nutrition">Track your nutrition</string>
        <string name="calories_summary">Calories Summary</string>
        <string name="consumed">Consumed</string>
        <string name="burned">Burned</string>
        <string name="app_logo">App Logo</string>
        <string name="workout">Workout</string>
        <string name="meal">Meal</string>
        <string name="arrow">Arrow</string>
        <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


        <!-- Add these missing strings -->
        <string name="create_account">Create Account</string>
        <string name="fill_details_to_continue">Fill your details to continue</string>
        <string name="full_name">Full Name</string>
        <string name="confirm_password">Confirm Password</string>
        <string name="register">Register</string>
        <string name="already_have_account_login">Already have an account? Login</string>


        <!-- Add these missing strings -->
        <string name="profile">Profile</string>
        <string name="settings">Settings</string>
        <string name="logout">Logout</string>
        <string name="edit_profile">Edit Profile</string>
        <string name="your_statistics">Your Statistics</string>
        <string name="total_workouts">Total Workouts</string>
        <string name="this_week">This Week</string>
        <string name="total_meals">Total Meals</string>
        <string name="add">Add</string>
        <string name="cancel">Cancel</string>
        <string name="delete">Delete</string>
        <string name="delete_workout">Delete Workout</string>
        <string name="delete_workout_message">Are you sure you want to delete this workout?</string>
        <string name="delete_meal">Delete Meal</string>
        <string name="delete_meal_message">Are you sure you want to delete this meal?</string>
        <string name="add_workout">Add Workout</string>
        <string name="add_meal">Add Meal</string>
        <string name="no_workouts_yet">No Workouts Yet</string>
        <string name="no_meals_yet">No Meals Yet</string>
        <string name="tap_to_add_first_workout">Tap the + button to add your first workout</string>
        <string name="tap_to_add_first_meal">Tap the + button to add your first meal</string>
        <string name="member_since">Member since</string>


</resources>